feat: add any sections - New Template - Hotest News - CTA Create Invitation

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,11 @@ body {
     flex-direction: column;
 }
 
+.img-responsive {
+    width: 100%;
+    height: auto;
+}
+
 header.navbar-container {
     max-width: 1200px;
     width: 100%;
@@ -161,6 +166,263 @@ main aside .social-media li a:hover {
     color: #89b0d9;
 }
 
+/* Section Newest Authors & Contents */
+/* Newest Authors */
+section#newest-authors {
+    background: #f4f4f5;
+}
+
+section .newest-authors {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+
+#newest-author-title {
+    line-height: .5rem;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+
+h1.newest-author-title {
+    font-size: 2rem;
+}
+
+span.newest-author-description {
+    font-size: 1.7rem;
+}
+
+.newest-author-description {
+    color: rgba(107,114,128, 1);
+}
+/* End Newest Authors */
+
+/* Newest Contents */
+.newest-authors-contents {
+    max-width: 1200px;
+    width: 100%;
+}
+
+.newest-authors-contents > ul {
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem 1rem;
+    list-style-type: none;
+}
+
+.newest-authors-contents > ul > li{
+    width: 20%;
+    transition: all .15s ease-in;
+}
+
+.newest-authors-contents > ul > li > a {
+    text-decoration: none;
+}
+
+.card.content {
+    display: flex;
+    flex-direction: column;
+    /* background: white; */
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    line-height: 0;
+}
+
+.card.content > .author-pict {
+    margin: auto;
+    min-width: 50px;
+    width: 150px;
+}
+
+.newest-authors-contents.card.content > h2 {
+    align-content: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.newest-authors-contents.card.content > span {
+    font-size: .9rem;
+    font-weight: 500;
+}
+
+/* End Newest Contents */
+
+/* News Hot Contents */
+section#hot-news {
+    background: #ffffff;
+    width: 100%;
+    margin-inline: auto;
+    padding: 2rem 4rem;
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.container-hot-news{
+    max-width: 2300px;
+    line-height: .5rem;
+    display: flex;
+    flex-direction: column;
+    margin-inline-start: 7%;
+}
+
+.news-hot-title {
+    margin-block-end: 2rem;
+}
+
+.news-hot-title > h1 {
+    font-size: 2rem;
+}
+
+.news-hot-title > span {
+    font-size: 1.7rem;
+    color: rgba(107,114,128, 1);
+}
+
+.news-hot-contents {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 1200px;
+}
+
+.hot-news-first {
+    flex: 1;
+}
+
+.card.card-hot-news-first {
+    margin-inline-end: 5%
+}
+
+.card.card-hot-news-first > .description > h2 {
+    line-height: .1rem;
+}
+
+.card.card-hot-news-first > .description > p {
+    line-height: 1.2rem;
+    letter-spacing: 1.2px;
+    text-align: justify;
+}
+
+.card.card-hot-news-first > .description > p:after {
+    display: block;
+    width: 100%;
+    content: '';
+    border: 0.2px solid rgba(229,231,235, 1);
+    margin-top: 10px;
+}
+
+.img-responsive.img-hot-news-first {
+    border-radius: 20px;
+    margin-block-end: 15px;
+}
+
+.hot-news-lists {
+    flex: 1;
+    flex-direction: column;
+}
+
+.card.card-hot-news-list {
+    display: flex;
+    flex-direction: row;
+    background-color: whitesmoke;
+    margin-block-end: 10px;
+    border-radius: 10%;
+    height: 187px;
+}
+
+.card.card-hot-news-list > .description {
+    margin-inline-start: 15px
+}
+
+.card.card-hot-news-list > .description > h2{
+    line-height: 1.5rem;
+}
+
+.card.card-hot-news-list > .description > p{
+    line-height: 1.5rem;
+    color: #a6a0a0;
+    margin-block-start: -15px;
+    font-size: 20px;
+    text-align: justify;
+    margin-inline-end: 25px;
+}
+
+.img-responsive.img-hot-news-list {
+    width: 40%;
+    border-radius: 0 30px 30px 0;
+}
+
+.card.card-hot-news-list > h2 {
+    line-height: 2rem;
+    margin-inline-start: 20px;
+}
+/* End News Hot Contents */
+
+/* Subscribe News */
+section#subscribe-news {
+    background: #E9F4F6;
+    width: 100%;
+    margin-inline: auto;
+    padding: 2rem 9rem;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    min-height: 90%;
+}
+
+.container-subscribe-news {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.cta-subscribe-news {
+    flex: 1 1;
+}
+
+.cta-subscribe-news > h2 {
+    font-size: 3.5rem;
+    margin-block: 1rem;
+}
+
+.cta-subscribe-news > p {
+    font-size: 1.5rem;
+}
+
+.img-responsive.img-subscribe {
+    width: 100%;
+    height: 500px;
+}
+
+.background-subscribe-news {
+    margin-inline-end: -10%;
+}
+
+.cta-subscribe-news > button {
+    padding: .8rem 2.5rem;
+    margin-block-start: 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 1rem;
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+
+    border: 3px solid transparent;
+    border-radius: 999px;
+    background-color: #2D3E50;
+    cursor: pointer;
+    transition: all .15s ease-in;
+}
+/* End Subscribe News */
+
+
+
+
 /* Medium devices (landscape tablets, 768px and down) */
 @media screen and (max-width: 768px) {
     header.navbar-container {
@@ -191,5 +453,76 @@ main aside .social-media li a:hover {
 
     main .content .content-image {
         order: -1;
+    }
+
+    .newest-authors-contents > ul {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .newest-authors-contents > ul > li {
+        width: 100%;
+        transition: all .15s ease-in;
+    }
+
+    .newest-authors-contents {
+        max-width: 1200px;
+        width: 75%;
+        text-align: -webkit-center;
+    }
+
+    span.newest-author-description {
+        font-size: 1.3rem;
+    }
+
+    section#hot-news {
+        flex-direction: column;
+    }
+
+    .container-hot-news {
+        flex-direction: column;
+    }
+
+    .news-hot-title > span {
+        font-size: 1.2rem;
+        color: rgba(107,114,128, 1);
+        line-height: 1;
+    }
+
+    .news-hot-contents {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .hot-news-first {
+        flex: 1;
+        width: 110%;
+    }
+
+    .card.card-hot-news-first > .description > h2 {
+        line-height: 1;
+    }
+
+    .card.card-hot-news-list {
+        flex-direction: column;
+    }
+
+    .img-responsive.img-hot-news-list {
+        order: -1;
+    }
+
+    #subscribe-news {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .container-subscribe-news {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    footer {
+        background: #2D3E50;
+        font-size: 25px;
     }
 }
